--- a/_includes/nav-bar.html
+++ b/_includes/nav-bar.html
@@ -5,19 +5,13 @@
     <a href="index.html">Home</a>
   </li>
   <li>
-    <a href="papers.html">Papers</a>
-  </li>
-  <li>
-    <a href="teaching.html">Teaching</a>
-  </li>
-  <li>
-    <a href="collaborators.html">Collaborators</a>
-  </li>
-  <li>
-    <a href="join.html">Prospective students</a>
+    <a href="papers.html">Publications</a>
   </li>
   <li>
     <a href="cv.html">CV</a>
+  </li>
+  <li>
+    <a href="cv.html">Contact</a>
   </li>
 </ul>
 
