--- a/_includes/nav-bar.html
+++ b/_includes/nav-bar.html
@@ -8,7 +8,7 @@
     <a href="papers.html">Publications</a>
   </li>
   <li>
-    <a href="cv.html">CV</a>
+    <a href="teaching.html">CV</a>
   </li>
   <li>
     <a href="cv.html">Contact</a>
