--- a/_includes/nav-bar.html
+++ b/_includes/nav-bar.html
@@ -5,7 +5,7 @@
     <a href="index.html">Home</a>
   </li>
   <li>
-    <a href="papers.html">Publications</a>
+    <a href="publications.html">Publications</a>
   </li>
   <li>
     <a href="teaching.html">CV</a>
