--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,9 +41,8 @@
         <a href="http://getbootstrap.com/">bootstrap</a>,
         and <a href="http://www.vim.org/">vim</a>.<br/> 
         Feel free to reuse the 
-        <a href="https://github.com/alopez/alopez.github.com">source code</a>.<br/>
-        Mirrors: <a href="http://homepages.inf.ed.ac.uk/alopez/">inf.ed.ac.uk</a>, 
-        <a href="http://alopez.github.io/">github.io</a>
+        <a href="https://github.com/yongbowin/yongbowin.github.io">source code</a>.<br/>
+        Mirrors: <a href="https://yongbowin.github.io/">github.io</a>
         <br/><br/>
       </footer>
     </div>
