--- a/_includes/nav-bar.html
+++ b/_includes/nav-bar.html
@@ -11,7 +11,7 @@
     <a href="teaching.html">CV</a>
   </li>
   <li>
-    <a href="cv.html">Contact</a>
+    <a href="CV/CV_Yongbo Wang.pdf">Contact</a>
   </li>
 </ul>
 
