--- a/_includes/nav-bar.html
+++ b/_includes/nav-bar.html
@@ -8,10 +8,7 @@
     <a href="publications.html">Publications</a>
   </li>
   <li>
-    <a href="teaching.html">CV</a>
-  </li>
-  <li>
-    <a href="CV/CV_Yongbo Wang.pdf">Contact</a>
+    <a href="CV/CV_Yongbo Wang.pdf">CV</a>
   </li>
 </ul>
 
