--- a/_includes/paper-list.html
+++ b/_includes/paper-list.html
@@ -4,9 +4,9 @@
     {% if paper.venue == include.venue %}
       <li>
       {% if paper.authors %}
-        {{ paper.authors | replace: 'With', 'Adam Lopez,' }}. 
+        {{ paper.authors | replace: 'With', 'Yongbo Wang,' }}. 
       {% else %}
-        Adam Lopez.
+        Yongbo Wang.
       {% endif %}
       {{ paper.year }}. 
       {{ paper.title }}. 
