--- a/_includes/nav-bar.html
+++ b/_includes/nav-bar.html
@@ -8,6 +8,9 @@
     <a href="papers.html">Publications</a>
   </li>
   <li>
+    <a href="projects.html">Projects</a>
+  </li>
+  <li>
     <a href="CV/CV_Yongbo Wang.pdf">CV</a>
   </li>
 </ul>
