--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,9 +41,9 @@
         <a href="http://jekyllrb.com">jekyll</a>,
         <a href="http://getbootstrap.com/">bootstrap</a>,
         and <a href="http://www.vim.org/">vim</a>.<br/> 
-        Feel free to reuse the 
-        <a href="https://github.com/yongbowin/yongbowin.github.io">source code</a>.<br/>
-        Mirrors: <a href="https://yongbowin.github.io/">github.io</a>
+        Website template available at 
+        <a href="https://github.com/yongbowin/yongbowin.github.io">github</a> fork from 
+        <a href="https://github.com/alopez/alopez.github.com">Adam Lopez's site</a>.
         <br/><br/>
       </footer>
     </div>
