--- a/_includes/nav-bar.html
+++ b/_includes/nav-bar.html
@@ -5,6 +5,9 @@
     <a href="index.html">Home</a>
   </li>
   <li>
+    <a href="education.html">Education</a>
+  </li>
+  <li>
     <a href="papers.html">Publications</a>
   </li>
   <li>
