--- a/_includes/nav-bar.html
+++ b/_includes/nav-bar.html
@@ -14,6 +14,9 @@
     <a href="projects.html">Projects</a>
   </li>
   <li>
+    <a href="self-evaluation.html">Self-evaluation</a>
+  </li>
+  <li>
     <a href="CV/CV_YongboWang.pdf">CV</a>
   </li>
 </ul>
