--- a/css/diy.css
+++ b/css/diy.css
@@ -15,3 +15,8 @@ h3 {
   color: #224b8d;
   font-weight: bold;
 }
+.color-blue-line {
+  color: #224b8d;
+  font-weight: bold;
+  text-decoration: underline;
+}
