--- a/css/diy.css
+++ b/css/diy.css
@@ -20,3 +20,9 @@ h3 {
   font-weight: bold;
   text-decoration: underline;
 }
+.solid-line {
+  width: 100%;
+  height: 1px;
+  background-color: #eee;
+  margin: 20px 0;
+}
