--- a/css/diy.css
+++ b/css/diy.css
@@ -33,7 +33,7 @@ h3 {
   background-color: #eee;
   margin: 25px 0 10px 0;
 }
-img {
-  width: 70%;
-  height: 70%;
+.exp_logo {
+  width: 70px;
+  height: 70px;
 }
